Changelog
=========

1.0.1 (unreleased)
------------------

* Use javascript function from plone.formwidget.autocomplete to add new input
  boxes, make javascript as clone-safe (when making new rows in datagridfield)
  as possible
  [lentinj]

* Just use full widget name in ++widget++ URL, don't try and strip form prefix
  off. If within a subform, this is the wrong thing to do and the traverser now
  supports stripping the initial 'form.widgets'
  [lentinj]

* Workaround for sources being used without being bound first.
  [lentinj]

* Check the request for context before falling back to getSite()
  [lentinj]

* Add a UUIDSource that stores plone.uuid pointers to content.
  [lentinj]

* Use tokens as full URL of content, move all token<->value operations into the
  source. Rename methods so that actually-public methods have public names
  [lentinj]

* Alter terms so that token is the full path to an item, value is the path
  without portal_url that is stored in the DB. This means all the path parsing
  can be kept within the source.
  [lentinj]

* _filter is used outside the source, so not an internal helper function
  anymore.
  [lentinj]

1.0 (2011-04-30)
----------------

* Made compatible with Plone 4.1 by loading the permissions.zcml from
  Products.CMFCore (only when plone.app.upgrade is available, to keep
  compatibility with Plone 3, if we currently have that).
  [maurits]

* Improved CSS for selected items to make them more evident in the Sunburst
  theme.
  [davisagli]

* Add content type CSS class to items in the navtree so that icons are shown
  in Plone 4.
  [davisagli]

1.0b3 (2011-02-11)
------------------

* Use `zope.i18n.translate` instead of translation_service, since
  translation_service was removed in plone4.
  [jbaumann]


1.0b2 (2010-08-25)
------------------

* Fall back to the site to perform content-related operations if the
  context is not wrapped into an acquisition chain.
  [dukebody]
